ingress/app/whoami.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: whoami
  labels:
    app: whoami

spec:
  replicas: 2
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
    spec:
      containers:
      - name: whoami
        #image: containous/whoami
        #image: gcr.io/kubernetes-e2e-test-images/echoserver:2.2
        #image: containersol/k8s-deployment-strategies
        image: gcr.io/google-samples/hello-app:1.0
        ports:
        - containerPort: 8080
---
kind: Service
apiVersion: v1
metadata:
  name: whoami
  labels:
    app: whoami
spec:
  selector:
    app: whoami
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      name: web

---
kind: Ingress
apiVersion: networking.k8s.io/v1beta1
metadata:
  name: whoami
spec:
  tls:
  rules:
  - host: whoami
    http:
      paths:
      - backend:
          serviceName: whoami
          servicePort: 80
